<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home_title" />
    <item
        android:id="@+id/nav_newsfeed"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/newsfeed_title" />
    <item
        android:id="@+id/nav_friends"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/friends_title" />
    <item
        android:id="@+id/nav_education"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/education_title" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile_title" />
</menu>

